<resources>
    <string name="app_name">Kakshaa</string>
    <string name="userimg">userimg</string>
    <string name="registration_no">Registration No.</string>
    <string name="pwdimg">pwdimg</string>
    <string name="password">Password</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="feed">Feed</string>
    <string name="attendance">Attendance</string>
    <string name="timetable">Timetable</string>
    <string name="resources">Resources</string>
    <string name="profile">Profile</string>
    <string name="sponsors">sponsors</string>
    <string name="faculty">Faculty</string>
</resources>
