<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/newsfeed"
            android:icon="@drawable/newsfeed"
            android:title="@string/feed" />
        <item
            android:id="@+id/attendance"
            android:icon="@drawable/attendance"
            android:title="@string/attendance" />
        <item
            android:id="@+id/timetable"
            android:icon="@drawable/timetable"
            android:title="@string/timetable" />
        <item
            android:id="@+id/res"
            android:icon="@drawable/res"
            android:title="@string/resources" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/username"
            android:title="@string/profile" />

        <item
            android:id="@+id/faculty"
            android:icon="@drawable/username"
            android:title="@string/faculty" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
